tests/unit/default/syntax-error/096-add-pk-at.e.t
---- IN ----
+PK@
---- OUT ----
---- ERR ----
syntax: expected <name> after `+PK@` instead of EOL at position 4 - at line 1
---- EXIT ----
1
